[package]
name = "userv"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
capnpc = "0.15"

[dependencies]
bzip2 = "0.4.3"
roxmltree = "0.16.0"
capnp = "0.15"
flate2 = "1.0.25"
